welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {lireColonne()
}

def lireColonne():Array[Color] = {
  val n:Int = getMondeHauteur()
  var t = new Array[Color] (n)
  for (i <- 0 to n-1) {
    t(i) = getCouleurSol()
    avance()
  }
}